# impl_agentic_systems_course

./: .gitignore  NOTICE  README.md
ch3_github_issues/: README.md  pyproject.toml  report.md
ch3_github_issues/src/ch3_github_issues/: crew.py  main.py
ch3_github_issues/src/ch3_github_issues/config/: agents.yaml  tasks.yaml
ch3_github_issues/src/ch3_github_issues/tools/: custom_tool.py  github_tool.py
ch4_github_slack/: README.md  pyproject.toml
ch4_github_slack/src/ch4_github_slack/: crew.py  main.py
ch4_github_slack/src/ch4_github_slack/config/: agents.yaml  tasks.yaml
ch4_github_slack/src/ch4_github_slack/tools/: custom_tool.py  slack_tool.py
ch4_gmail_scheduling/: README.md  pyproject.toml
ch4_gmail_scheduling/src/ch4_gmail_scheduling/: crew.py  main.py
ch5_booking_flights/: README.md  pyproject.toml
ch5_booking_flights/src/ch5_booking_flights/: crew.py  main.py
ch5_booking_flights/src/ch5_booking_flights/config/: agents.yaml  tasks.yaml
ch5_booking_flights/src/ch5_booking_flights/tools/: flight_tool.py
