[project]
name = "ch4_gmail_scheduling"
version = "0.1.0"
description = "ch4-gmail-scheduling using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
ch4_gmail_scheduling = "ch4_gmail_scheduling.main:run"
run_crew = "ch4_gmail_scheduling.main:run"
train = "ch4_gmail_scheduling.main:train"
replay = "ch4_gmail_scheduling.main:replay"
test = "ch4_gmail_scheduling.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
