[project]
name = "ch5_booking_flights"
version = "0.1.0"
description = "ch5-booking-flights using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
ch5_booking_flights = "ch5_booking_flights.main:run"
run_crew = "ch5_booking_flights.main:run"
train = "ch5_booking_flights.main:train"
replay = "ch5_booking_flights.main:replay"
test = "ch5_booking_flights.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
